--- a/HR.ipynb
+++ b/HR.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_author_ = \"Bertin NGA OHANDZA\""
+    "_author_ = \"BNA\""
    ]
   },
   {
